api: report secure revisions (bug 1539289)
Revision entities returned by the API publish a new "is_secure"
property.  Revisions for which this property is True contain
security-sensitive information and should be handled appropriately by
clients.
