# landoapi/revisions.py
@@ -5,6 +5,7 @@ import logging
 from collections import Counter
 
 from landoapi.phabricator import PhabricatorClient, RevisionStatus
+from landoapi.projects import get_secure_project_phid
 
 logger = logging.getLogger(__name__)
 
@@ -118,3 +119,26 @@ def check_author_planned_changes(*, revision, **kwargs):
         return None
 
     return "The author has indicated they are planning changes to this revision."
+
+
+def revision_is_secure(revision, phabclient):
+    """Does the given revision contain security-sensitive data?
+
+    Such revisions should be handled according to the Security Bug Approval Process.
+    See https://wiki.mozilla.org/Security/Bug_Approval_Process.
+
+    Args:
+        revision: The 'data' element from a Phabricator API response containing
+            revision data.
+        phabclient: A PhabricatorClient instance.
+    """
+    secure_project_phid = get_secure_project_phid(phabclient)
+    revision_project_tags = phabclient.expect(
+        revision, "attachments", "projects", "projectPHIDs"
+    )
+    is_secure = secure_project_phid in revision_project_tags
+    logger.debug(
+        "revision is security-sensitive?",
+        extra={"value": is_secure, "revision": revision["id"]},
+    )
+    return is_secure
